Jgrowl was installed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require bootstrap
  *= require flat-ui
  *= require bootstrap-tagsinput
+ *= require jquery.jgrowl.min
  *= require_tree .
  *= require_self
  */
