--- a/app/assets/stylesheets/basic-css.css.sass
+++ b/app/assets/stylesheets/basic-css.css.sass
@@ -23,3 +23,16 @@
 .sort_panel
   li
     float: right
+
+
+.growl_alert
+  color: #ffffff !important
+  background-color: firebrick !important
+
+.growl_success
+  color: #ffffff !important
+  background-color: mediumseagreen !important
+
+.growl_notice
+  color: #ffffff !important
+  background-color: #0066bb !important
