--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,2 +1,3 @@
 $("#quantity-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").html("<%= pluralize(@comment.commentable.comments.count, 'comment') %> <b class='caret'></b>");
 $("#comment-<%= @comment.id %>").remove();
+$.jGrowl("<p>Comment was deleted</p>", {theme: 'growl_notice'});
