--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
 <div class="container">
   <%= render 'shared/submenu'  %>
 
-  <%= render 'shared/error_messages' %>
+  <div id="ajax_error_messages">
+    <%= render 'shared/error_messages' %>
+  </div>
 
   <div id="main" role="main">
     <div class="row">
