Answers features test green

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -157,6 +157,15 @@
         padding-bottom: 10px
       .comment_meta
         font-size: 12px
+        .comment_tools
+          display: inline
+          margin-left: 10px
+          font-size: 14px
+          .tool
+            margin-right: 10px
+            display: inline
+            a
+              color: lightgray
         .comment_author
           display: inline
         .comment_date
