--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -6,7 +6,8 @@
     .answer_tools
       - if answer.user == current_user
         .tool
-          = link_to 'Edit', edit_question_answer_path(answer.question, answer), remote: true
+          = link_to edit_question_answer_path(answer.question, answer), remote: true, class: 'answer_edit_icon' do
+            span.fui-new
         .tool
           = link_to question_answer_path(answer.question, answer), remote: true, method: :delete do
             span.glyphicon.glyphicon-trash
