--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -9,7 +9,7 @@
           = link_to edit_question_answer_path(answer.question, answer), remote: true, class: 'answer_edit_icon' do
             span.fui-new
         .tool
-          = link_to question_answer_path(answer.question, answer), remote: true, method: :delete do
+          = link_to question_answer_path(answer.question, answer), remote: true, method: :delete, class: 'answer_delete_icon' do
             span.glyphicon.glyphicon-trash
     .answer_date
       = answer.created_at.to_formatted_s(:short)
