--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -8,10 +8,10 @@
     .comment_tools
       - if comment.user == current_user
         .tool
-          = link_to edit_comment_path(comment), remote: true do
+          = link_to edit_comment_path(comment), remote: true, class: 'comment_edit_icon' do
             span.fui-new
         .tool
-          = link_to comment, method: :delete, remote: true do
+          = link_to comment, method: :delete, remote: true, class: 'comment_delete_icon' do
             span.glyphicon.glyphicon-trash
 
   .comment_body
