Check for permissions in AC, green

--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -1,2 +1,2 @@
 $("#item-answer-<%= @answer.id %>").replaceWith("<%= j render 'answers/answer', answer: @answer %>");
-$.jGrowl("<p>Comment was updated!</p>", {theme: 'growl_success'});
+$.jGrowl("<p>Answer was updated!</p>", {theme: 'growl_success'});
