--- a/app/views/answers/update.js.erb
+++ b/app/views/answers/update.js.erb
@@ -1,2 +1,9 @@
-$("#item-answer-<%= @answer.id %>").replaceWith("<%= j render 'answers/answer', answer: @answer %>");
-$.jGrowl("<p>Answer was updated!</p>", {theme: 'growl_success'});
+<% if @answer.errors.any? %>
+    $("#answer-body-<%= @answer.id %>").parent().parent().addClass('has-error');
+    $(".help-block").remove();
+    $("#answer-body-<%= @answer.id %>").parent().append("<span class='help-block'><%= @answer.errors.full_messages.first %></span>");
+<% else %>
+    $("#item-answer-<%= @answer.id %>").replaceWith("<%= j render 'answers/answer', answer: @answer %>");
+    $.jGrowl("<p>Answer was updated!</p>", {theme: 'growl_success'});
+<% end %>
+
