--- a/app/views/answers/_answer_form.html.slim
+++ b/app/views/answers/_answer_form.html.slim
@@ -1,3 +1,3 @@
 = simple_form_for([@question, @answer], role: "form", remote: true, authenticity_token: true) do |f|
-  = f.input :body, :input_html => {:rows => 8, maxlength: 6000}, label: 'Your answer'
+  = f.input :body, :input_html => {:rows => 8, maxlength: 6000, id: "answer-body-#{@answer.id || 'new'}"}, label: 'Your answer'
   = f.submit class: 'btn btn-info'
