--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -1,1 +1,3 @@
 $("#question-body-<%= @question.id %>").html("<%= j render 'questions/body' %>");
+$(".question_show_title h3").html("<%= @question.title %>");
+$.jGrowl("<p>Question was updated!</p>", {theme: 'growl_success'});
