Feature spec for comment fail

--- a/app/views/comments/update.js.erb
+++ b/app/views/comments/update.js.erb
@@ -1,2 +1,8 @@
-$("#comment-<%= @comment.id %>").replaceWith("<%= j render 'comments/comment', comment: @comment %>");
-$.jGrowl("<p>Comment was updated!</p>", {theme: 'growl_success'});
+<% if @comment.errors.any? %>
+    $("#input-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").parent().parent().addClass('has-error');
+    $(".help-block").remove();
+    $("#input-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").parent().append("<span class='help-block'><%= @comment.errors.full_messages.first %></span>");
+<% else %>
+    $("#comment-<%= @comment.id %>").replaceWith("<%= j render 'comments/comment', comment: @comment %>");
+    $.jGrowl("<p>Comment was updated!</p>", {theme: 'growl_success'});
+<% end %>
