--- a/app/views/comments/_edit_form.html.slim
+++ b/app/views/comments/_edit_form.html.slim
@@ -1,3 +1,3 @@
 = simple_form_for(comment, role: "form", remote: true) do |f|
-  = f.input :body, label: 'Edit your comment'
+  = f.input :body, label: 'Edit your comment', input_html: { id: "input-#{comment.commentable.class.to_s.downcase}-#{comment.commentable.id}" }
   = f.submit class: 'btn btn-info'
