--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,11 @@
-$("#quantity-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").html("<%= pluralize(@comment.commentable.comments.count, 'comment') %> <b class='caret'></b>");
-$("#<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").append('<%= j render "comment", comment:@comment%>');
-$("#input-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").val("");
+<% if @comment.errors.any? %>
+    $("#input-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").parent().parent().addClass('has-error');
+    $(".help-block").remove();
+    $("#input-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").parent().append("<span class='help-block'><%= @comment.errors.full_messages.first %></span>");
+<% else %>
+    $("#input-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").parent().parent().removeClass('has-error');
+    $(".help-block").remove();
+    $("#quantity-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").html("<%= pluralize(@comment.commentable.comments.count, 'comment') %> <b class='caret'></b>");
+    $("#<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").append('<%= j render "comment", comment:@comment%>');
+    $("#input-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").val('');
+<% end %>
