Feature tests are all green

--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,3 +1,5 @@
+
+// TODO Переделать через DATA- или добавить спец. селекторы ко всем объектам, к которым идет обращение через JS
 <% if @answer.errors.any? %>
     $("#answer-body-new").parent().parent().addClass('has-error');
     $(".help-block").remove();
