--- a/app/views/answers/edit.js.erb
+++ b/app/views/answers/edit.js.erb
@@ -1,1 +1,2 @@
+// TODO Сделать универсальную форму на стороне клиента и выводить в нужном месте используя ресурсы клиента.
 $("#item-answer-<%= @answer.id %> .answer_body").html("<%= j render 'answers/answer_form' %>");
