--- a/app/views/questions/_body.html.slim
+++ b/app/views/questions/_body.html.slim
@@ -3,4 +3,4 @@
   = raw (@question.tag_list.sort { |a, b| a <=> b }).map  {|t| link_to t, tag_questions_path(t), class: "btn btn-xs tag"}.join(" ")
 ul
   - @question.attachments.each do |a|
-    li = a.file.file.filename
+    li = link_to a.file.filename, a.file.url
