--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,3 +1,11 @@
 h3 New Question
 
 = render 'questions/form'
+
+javascript:
+  $("#question_body").val('');
+  $("#question_title").val('');
+  $("#files_upload-question-#{@question.id}").fileupload({
+    dataType: "script",
+    dropZone: $("#attahcments-question")
+    });
