--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require flat-ui
  *= require bootstrap-tagsinput
  *= require jquery.jgrowl.min
+ *= require jquery.fileupload-ui
  *= require_tree .
  *= require_self
  */
