--- a/app/assets/stylesheets/basic-css.css.sass
+++ b/app/assets/stylesheets/basic-css.css.sass
@@ -1,3 +1,11 @@
+
+.file-uploads-form
+  display: none
+
+#attahcments-question
+  text-align: left
+  list-style-type: none
+
 .container, nav
   min-width: 768px
 #main
