--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,7 +1,19 @@
-= simple_form_for @question, role: "form", remote: @question.new_record? ? false : true, authenticity_token: true do |f|
+= simple_form_for @question, role: "form", remote: @question.new? ? false : true, authenticity_token: true, html: { multipart: true } do |f|
+    //= f.input_field :draft, as: :hidden, value: false
     = f.input :title, autofocus: true, :input_html => {maxlength: 255}
     = f.input :body, :input_html => {:rows => 8, maxlength: 6000}
     = f.input :tag_list, :input_html => {maxlength: 255, :"data-role" => "tagsinput"}, label: 'Tags'
-    = f.simple_fields_for :attachments do |a|
-      = a.input :file, as: :file
+    ul.tile id="attahcments-question"
+      a onclick="$('#files_upload-question-#{@question.id}').click()" class="btn btn-default"
+        | Add files here
+      - if @question.attachments.exists?
+        - @question.attachments.each do |a|
+          li id="edit-attachment-#{a.id}"
+            =' link_to a.file.filename, a.file.url
+            ' |
+            =' number_to_human_size a.file.size
+            ' |
+            = link_to "Remove this file", attachment_path(a), method: :delete, remote: true
     = f.submit class: "btn btn-info"
+
+.upload_files = render 'attachments/form', object:@question
