--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -10,4 +10,6 @@
     $("#answer-body-new").parent().parent().removeClass('has-error');
     $(".help-block").remove();
     $("#answer-body-new").val('');
+    $("#list-answer_new").html('');
+    $("#attachment_ids-answer_new").val('');
 <% end %>
