--- a/app/views/answers/edit.js.erb
+++ b/app/views/answers/edit.js.erb
@@ -1,2 +1,15 @@
 // TODO Сделать универсальную форму на стороне клиента и выводить в нужном месте используя ресурсы клиента.
 $("#item-answer-<%= @answer.id %> .answer_body").html("<%= j render 'answers/answer_form' %>");
+
+var idContainer;
+
+idContainer =  $("answer_attachment_ids-<%= @answer.id %>");
+
+var arr = [];
+
+<% @answer.attachments.each do |attachment| %>
+    arr.push('<%= attachment.id %>');
+<% end %>
+
+arr.join(',');
+idContainer.val(arr);
