Little fix — Clips was deleted

--- a/app/assets/stylesheets/basic-css.css.sass
+++ b/app/assets/stylesheets/basic-css.css.sass
@@ -1,3 +1,15 @@
+#new_question
+  margin-bottom: 20px
+
+.tile_for_upload
+  background-color: #EFF0F2
+  border-radius: 6px
+  padding: 14px
+  position: relative
+  text-align: left
+  margin-bottom: 10px
+  .add_files_here
+    margin-bottom: 15px
 
 .file-uploads-form
   display: none
