--- a/app/views/attachments/_attachments_upload_and_list.html.slim
+++ b/app/views/attachments/_attachments_upload_and_list.html.slim
@@ -1,7 +1,7 @@
 - @attachments_list = []
 - @form_id = "#{object.class.to_s.downcase}_#{object.id || 'new'}"
-.tile
-  a onclick="$('#files_upload_#{@form_id}').click()" class="btn btn-default"
+.tile_for_upload
+  a onclick="$('#files_upload_#{@form_id}').click()" class="btn btn-default add_files_here"
     | Add files here
   ul id="list-#{@form_id}"
     - if object.attachments.exists?
@@ -13,8 +13,7 @@
           =' number_to_human_size a.file.size
           ' |
           = link_to "Remove this file", attachment_path(a), method: :delete, remote: true
-  br
-  br
+
   = hidden_field_tag "attachment_ids", @attachments_list.join(',') || '', id: "attachment_ids-#{@form_id}"
 
 
