--- a/app/views/attachments/destroy.js.erb
+++ b/app/views/attachments/destroy.js.erb
@@ -4,6 +4,7 @@ idContainer =  $("#attachment_ids-<%= @attachment.attachmentable_type.downcase %
 
 var array = idContainer.val().split(',');
 
+// TODO replace('<%= @attachment.id %>,', '')
 // Find and remove item from an array
 var i = array.indexOf('<%= @attachment.id %>');
 if(i != -1) {
