--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -6,6 +6,6 @@
     $("#input-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").parent().parent().removeClass('has-error');
     $(".help-block").remove();
     $("#quantity-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").html("<%= pluralize(@comment.commentable.comments.count, 'comment') %> <b class='caret'></b>");
-    $("#<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").append('<%= j render "comment", comment:@comment%>');
+    $("#<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").append('<%= j render "comments/comment", comment:@comment%>');
     $("#input-<%= @comment.commentable.class.to_s.downcase %>-<%= @comment.commentable.id %>").val('');
 <% end %>
