--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -41,3 +41,5 @@
       ' Please
       =' link_to 'login', '#', data: {target: "#signin_modal", toggle: "modal"}
       | to post answer.
+
+  = subscribe_to "/questions/#{@question.id}/answers"
