--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,3 +1,5 @@
-$("#answers_qty").html("<%= pluralize(@question.answers.count, 'answer') %>:");
-$("#item-answer-<%= @answer.id %>").remove();
-$.jGrowl("<p>Answer was deleted</p>", {theme: 'growl_notice'});
+<% publish_to "/questions/#{@question.id}/answers" do %>
+    $("#answers_qty").html("<%= pluralize(@question.answers.count, 'answer') %>:");
+    $("#item-answer-<%= @answer.id %>").remove();
+    $.jGrowl("<p>Answer was deleted</p>", {theme: 'growl_notice'});
+<% end %>
