--- a/app/views/questions/_question_summary.html.slim
+++ b/app/views/questions/_question_summary.html.slim
@@ -23,7 +23,7 @@
            span.fui-plus
       .excerpt
         .index_tag_list
-          = raw (q.tag_list.sort { |a, b| a <=> b }).map  {|t| link_to t, tag_questions_path(t), class: "btn btn-xs tag"}.join(" ")
+          = all_tag_list q
       small.asked_by
         ' asked
         =' timeago_tag q.created_at, :nojs => true, :limit => 10.days.ago
