--- a/app/views/shared/_tags_cloud_modal.html.slim
+++ b/app/views/shared/_tags_cloud_modal.html.slim
@@ -8,7 +8,7 @@
       .modal-body
         p Сущности:
         .tag_cloud
-          - tag_cloud Question.tag_counts.sort { |a, b| a.name <=> b.name }, %w{css1 css2 css3 css4 css5} do |tag, css_class|
+          - tag_cloud Question.tag_counts.sort_by {|a| a.name}, %w{css1 css2 css3 css4 css5} do |tag, css_class|
             =' link_to tag.name, tag_questions_path(tag.name), class: css_class
       .modal-footer
         button.btn.btn-default data-dismiss="modal" type="button"  Отмена
