--- a/app/views/questions/_question_summary.html.slim
+++ b/app/views/questions/_question_summary.html.slim
@@ -1,4 +1,4 @@
-- @questions.each do |q|
+- collection.each do |q|
   .question_list_item id="question-summary-#{q.id}"
     .question_info
       .votes
