--- a/app/views/votes/like.js.erb
+++ b/app/views/votes/like.js.erb
@@ -1,2 +1,6 @@
+<% if resource.persisted? %>
+
 $('[data-like-link]').html('' +
         '<%= j link_to "You like it.", question_dislike_path(@votable || @question), remote: true, method: :delete %>');
+
+<% end %>
