--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,9 +1,15 @@
 .question_show data={question_id: "#{@question.id}"}
   .question_show_title
     h3=@question.title
-    span data-like-link='true' =link_to "Like!", question_like_path(@question), remote: true, method: :post
-    br
-    span =link_to "unLike!", question_unlike_path(@question), remote: true, method: :post
+
+    span data-like-link='true'
+      - if current_user
+        - if @question.voted?(current_user)
+          =link_to "You like it.", question_dislike_path(@votable || @question), remote: true, method: :delete
+        - else
+          =link_to "Like!", question_like_path(@question), remote: true, method: :post
+        br
+        span =link_to "unLike!", question_unlike_path(@question), remote: true, method: :post
     .meta
       .meta_block
         span.fui-eye
