Like work for Question

--- a/app/assets/stylesheets/question.css.sass
+++ b/app/assets/stylesheets/question.css.sass
@@ -87,11 +87,16 @@
       margin-bottom: 10px
     .meta
       .meta_block
+        .question-like_links
+          display: inline
+          span
+            margin-left: 7px
         display: inline
         color: lightgray
         margin-right: 20px
         span
           margin-right: 7px
+          top: 2px
   .question_show_body
     word-spacing: 3px
     border-bottom: 2px solid lightgray
