--- a/app/views/votes/destroy.js.erb
+++ b/app/views/votes/destroy.js.erb
@@ -1,2 +1,1 @@
-$('[data-like-link]').html('' +
-        '<%= j link_to "Like!", question_like_path(@question || @votable), remote: true, method: :post %>');
+$('[data-like-link]').html("<%= j render 'votes/like_links', resource: parent %>");
