Fix with current user

--- a/app/views/votes/_like_links.html.slim
+++ b/app/views/votes/_like_links.html.slim
@@ -4,12 +4,14 @@ div.question-like_links
       =link_to "Don't like it", question_dislike_path(resource), remote: true, method: :delete
     - else
       =link_to 'Like it', question_like_path(resource), remote: true, method: :post
+  - else
+      = link_to 'Like it', '#', data: {target: "#signin_modal", toggle: "modal"}
   span.glyphicon.glyphicon-thumbs-up
   - if resource.votes.any?
-    - if resource.voted?(current_user)
+    - if current_user && resource.voted?(current_user)
       ' You
     - if resource.votes.size > 1
       ' and
-      =' pluralize(resource.votes.size, 'person') if resource.votes.size > 1
+    =' pluralize(resource.votes.size, 'person')
     ' like it
 
